tests/ui/coroutine/gen_block.none.stderr
error: expected identifier, found `42`
  --> $DIR/gen_block.rs:10:19
   |
LL |     let y = gen { 42.yield };
   |             ---   ^^ expected identifier
   |             |
   |             while parsing this struct

error[E0422]: cannot find struct, variant or union type `gen` in this scope
  --> $DIR/gen_block.rs:7:13
   |
LL |     let x = gen {};
   |             ^^^ not found in this scope

error[E0422]: cannot find struct, variant or union type `gen` in this scope
  --> $DIR/gen_block.rs:10:13
   |
LL |     let y = gen { 42.yield };
   |             ^^^ not found in this scope

error[E0422]: cannot find struct, variant or union type `gen` in this scope
  --> $DIR/gen_block.rs:13:5
   |
LL |     gen {};
   |     ^^^ not found in this scope

error[E0658]: yield syntax is experimental
  --> $DIR/gen_block.rs:16:21
   |
LL |     let _ = || true.yield;
   |                     ^^^^^
   |
   = note: see issue #43122 <https://github.com/rust-lang/rust/issues/43122> for more information
   = help: add `#![feature(yield_expr)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: yield syntax is experimental
  --> $DIR/gen_block.rs:20:34
   |
LL |     let _ = #[coroutine] || true.yield;
   |                                  ^^^^^
   |
   = note: see issue #43122 <https://github.com/rust-lang/rust/issues/43122> for more information
   = help: add `#![feature(yield_expr)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: the `#[coroutine]` attribute is an experimental feature
  --> $DIR/gen_block.rs:20:13
   |
LL |     let _ = #[coroutine] || true.yield;
   |             ^^^^^^^^^^^^
   |
   = note: see issue #43122 <https://github.com/rust-lang/rust/issues/43122> for more information
   = help: add `#![feature(coroutines)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: the `#[coroutine]` attribute is an experimental feature
  --> $DIR/gen_block.rs:24:13
   |
LL |     let _ = #[coroutine] || {};
   |             ^^^^^^^^^^^^
   |
   = note: see issue #43122 <https://github.com/rust-lang/rust/issues/43122> for more information
   = help: add `#![feature(coroutines)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: yield syntax is experimental
  --> $DIR/gen_block.rs:16:16
   |
LL |     let _ = || true.yield;
   |                ^^^^^^^^^^
   |
   = note: see issue #43122 <https://github.com/rust-lang/rust/issues/43122> for more information
   = help: add `#![feature(yield_expr)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: `yield` can only be used in `#[coroutine]` closures, or `gen` blocks
  --> $DIR/gen_block.rs:16:16
   |
LL |     let _ = || true.yield;
   |                ^^^^^^^^^^
   |
help: use `#[coroutine]` to make this closure a coroutine
   |
LL |     let _ = #[coroutine] || true.yield;
   |             ++++++++++++

error[E0658]: yield syntax is experimental
  --> $DIR/gen_block.rs:20:29
   |
LL |     let _ = #[coroutine] || true.yield;
   |                             ^^^^^^^^^^
   |
   = note: see issue #43122 <https://github.com/rust-lang/rust/issues/43122> for more information
   = help: add `#![feature(yield_expr)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 11 previous errors

Some errors have detailed explanations: E0422, E0658.
For more information about an error, try `rustc --explain E0422`.
